# GPSMock

./: .gitignore  LICENSE  Makefile  README.md
app/: project.yml
app/Resources/: AppIcon.icns  GPSMock.entitlements  Info.plist
app/Sources/: ContentView.swift  GPSMockApp.swift
app/Sources/Models/: AppViewModel.swift  ConnectionStateModel.swift  LocationProvider.swift  OSRMClient.swift  PlaceSearchModel.swift  ServiceSupervisor.swift  SidecarClient.swift  SidecarErrors.swift  SleepAssertion.swift  StateStore.swift  StatusPollModel.swift
app/Sources/Views/: ConnectionPill.swift  ControlsPanel.swift  LocateMeButton.swift  MapSurface.swift  OnboardingCard.swift  SearchBar.swift  WalkPreviewSheet.swift
docs/: setup.md
launchd/: com.louisdeng.gpsmock.sidecar.plist  com.louisdeng.gpsmock.tunneld.plist
openspec/changes/add-gpsmock/: tasks.md
openspec/changes/add-gpsmock/specs/gps-simulation/: spec.md
openspec/changes/add-gpsmock/specs/map-ui/: spec.md
openspec/changes/add-gpsmock/specs/route-planning/: spec.md
openspec/changes/add-prevent-sleep-setting/: design.md  tasks.md
openspec/changes/archive/2026-05-03-add-gpsmock/: design.md  proposal.md
openspec/changes/archive/2026-06-27-add-walk-loop-area/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-27-redesign-walk-flow/: design.md  tasks.md
openspec/changes/archive/2026-06-28-add-prevent-sleep-setting/: proposal.md  tasks.md
openspec/changes/redesign-walk-flow/: proposal.md  tasks.md
openspec/specs/device-connection/: spec.md
openspec/specs/gps-simulation/: spec.md
openspec/specs/map-ui/: spec.md
openspec/specs/route-planning/: spec.md
scripts/: check.sh  generate_icon.swift  sidecar.sh  tunneld.sh
sidecar/: README.md  pyproject.toml
sidecar/gpsmock_sidecar/: device.py  main.py  walker.py
sidecar/tests/: test_endpoints.py  test_walker.py
(+6 files in other folders)
